Update item endpoint
