# server/handler/item.go
@@ -23,9 +23,20 @@ type ItemRequest struct {
 	Phone         string
 	Category      string
 	Description   string
-	Popular       bool
-	Active        bool
 	Images        []string
+}
+
+type ItemRequestUpdate struct {
+	Name          string
+	Price         uint64
+	Unit          string
+	Availability  int
+	FirstLastName string
+	Village       string
+	HomeNumber    string
+	Phone         string
+	Category      string
+	Description   string
 }
 
 func GetItem(w http.ResponseWriter, r *http.Request) {
@@ -54,6 +65,165 @@ func GetItem(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusOK)
 
 	json.NewEncoder(w).Encode(item)
+}
+
+func UpdateItem(w http.ResponseWriter, r *http.Request) {
+	body, err := ioutil.ReadAll(r.Body)
+	if err != nil {
+		ilog.Error(err)
+		utils.WriteMessageResponse(&w, http.StatusInternalServerError,
+			http.StatusText(http.StatusInternalServerError)+": "+err.Error())
+		return
+	}
+
+	session, err := extractSession(r)
+	if err != nil {
+		ilog.Error(err)
+		utils.WriteMessageResponse(&w, http.StatusInternalServerError, http.StatusText(http.StatusInternalServerError))
+		return
+	}
+
+	itemID, err := GetUrlParamValue(r, "itemID")
+	if err != nil {
+		ilog.Error(err)
+		utils.WriteMessageResponse(&w, http.StatusInternalServerError,
+			http.StatusText(http.StatusInternalServerError))
+		return
+	}
+
+	id, err := primitive.ObjectIDFromHex(itemID)
+	if err != nil {
+		utils.WriteMessageResponse(&w, http.StatusNotFound,
+			http.StatusText(http.StatusNotFound))
+		return
+	}
+	item, err := model.GetItem(&model.Item{ID: id})
+	if err != nil {
+		utils.WriteMessageResponse(&w, http.StatusNotFound,
+			http.StatusText(http.StatusNotFound))
+		return
+	}
+
+	if item.Owner != session.Email {
+		utils.WriteMessageResponse(&w, http.StatusForbidden, http.StatusText(http.StatusForbidden))
+		return
+	}
+
+	var itemRequest ItemRequestUpdate
+	if err := json.Unmarshal(body, &itemRequest); err != nil {
+		ilog.Error(err)
+		utils.WriteMessageResponse(&w, http.StatusInternalServerError, http.StatusText(http.StatusInternalServerError))
+		return
+	}
+
+	if (ItemRequestUpdate{}) == itemRequest {
+		utils.WriteMessageResponse(&w, http.StatusBadRequest,
+			http.StatusText(http.StatusBadRequest))
+		return
+	}
+
+	if itemRequest.Unit != "" {
+		if _, err := model.GetUnit(&model.Unit{Name: itemRequest.Unit}); err != nil {
+			ilog.Warn(err)
+			utils.WriteMessageResponse(&w, http.StatusBadRequest, "Unit doesn't exists")
+			return
+		}
+	}
+
+	if itemRequest.Village != "" {
+		if _, err := model.GetVillage(&model.Village{Name: itemRequest.Village}); err != nil {
+			ilog.Warn(err)
+			utils.WriteMessageResponse(&w, http.StatusBadRequest, "Village doesn't exists")
+			return
+		}
+	}
+
+	if itemRequest.Category != "" {
+		if _, err := model.GetCategory(&model.Category{Name: itemRequest.Category}); err != nil {
+			ilog.Warn(err)
+			utils.WriteMessageResponse(&w, http.StatusBadRequest, "Category doesn't exists")
+			return
+		}
+	}
+
+	itemUpdate := &model.ItemUpdate{
+		Name:          itemRequest.Name,
+		Price:         itemRequest.Price,
+		Unit:          itemRequest.Unit,
+		Availability:  itemRequest.Availability,
+		FirstLastName: itemRequest.FirstLastName,
+		Village:       itemRequest.Village,
+		HomeNumber:    itemRequest.HomeNumber,
+		Phone:         itemRequest.Phone,
+		Category:      itemRequest.Category,
+		Description:   itemRequest.Description,
+	}
+
+	if err := model.UpdateItem(&model.Item{ID: id}, itemUpdate); err != nil {
+		ilog.Error(err)
+		utils.WriteMessageResponse(&w, http.StatusInternalServerError,
+			http.StatusText(http.StatusInternalServerError)+": "+err.Error())
+		return
+	}
+	utils.WriteMessageResponse(&w, http.StatusOK, http.StatusText(http.StatusOK))
+}
+
+func ActivateItem(w http.ResponseWriter, r *http.Request) {
+	body, err := ioutil.ReadAll(r.Body)
+	if err != nil {
+		ilog.Error(err)
+		utils.WriteMessageResponse(&w, http.StatusInternalServerError,
+			http.StatusText(http.StatusInternalServerError)+": "+err.Error())
+		return
+	}
+
+	var activateItem model.ItemActivate
+	if err := json.Unmarshal(body, &activateItem); err != nil {
+		ilog.Error(err)
+		utils.WriteMessageResponse(&w, http.StatusInternalServerError, http.StatusText(http.StatusInternalServerError))
+		return
+	}
+
+	session, err := extractSession(r)
+	if err != nil {
+		ilog.Error(err)
+		utils.WriteMessageResponse(&w, http.StatusInternalServerError, http.StatusText(http.StatusInternalServerError))
+		return
+	}
+
+	itemID, err := GetUrlParamValue(r, "itemID")
+	if err != nil {
+		ilog.Error(err)
+		utils.WriteMessageResponse(&w, http.StatusInternalServerError,
+			http.StatusText(http.StatusInternalServerError))
+		return
+	}
+
+	id, err := primitive.ObjectIDFromHex(itemID)
+	if err != nil {
+		utils.WriteMessageResponse(&w, http.StatusNotFound,
+			http.StatusText(http.StatusNotFound))
+		return
+	}
+	item, err := model.GetItem(&model.Item{ID: id})
+	if err != nil {
+		utils.WriteMessageResponse(&w, http.StatusNotFound,
+			http.StatusText(http.StatusNotFound))
+		return
+	}
+
+	if item.Owner != session.Email {
+		utils.WriteMessageResponse(&w, http.StatusForbidden, http.StatusText(http.StatusForbidden))
+		return
+	}
+
+	if err := model.ActivateItem(&model.Item{ID: id}, &activateItem); err != nil {
+		ilog.Error(err)
+		utils.WriteMessageResponse(&w, http.StatusInternalServerError,
+			http.StatusText(http.StatusInternalServerError)+": "+err.Error())
+		return
+	}
+	utils.WriteMessageResponse(&w, http.StatusOK, http.StatusText(http.StatusOK))
 }
 
 func CreateItem(w http.ResponseWriter, r *http.Request) {
@@ -126,10 +296,9 @@ func CreateItem(w http.ResponseWriter, r *http.Request) {
 		Phone:         itemRequest.Phone,
 		Category:      itemRequest.Category,
 		Description:   itemRequest.Description,
-		Popular:       itemRequest.Popular,
-		Active:        itemRequest.Active,
 		Images:        images,
 		Created:       time.Now(),
+		Popular:       true,
 	}
 	if err := model.InsertItem(item); err != nil {
 		ilog.Error(err)
